--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ DDLG fg loves everyone!
 
     <script src="../cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
      
-        <meta content="🧕🏼" property="og:title"/>
+        <meta content="xͳʒ" property="og:title"/>
     	<meta content="" property="og:description" />
     	<meta content="https://cdn.discordapp.com/attachments/878304226227396708/1079099138043555850/baby.png" property="og:image" />
     	<meta content="#000000" data-react-helmet="true" name="theme-color" />
